--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -87,8 +87,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-1.png" alt="">
                             </div>
-                            <h4>Brand</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Brand / IGCSE Computer</h4>
+                            <p>因为我的基础有点薄弱，课堂上听老师讲课有点跟不上。自从跟着Eli老师学习之后，老师会将我不懂的模块拆分成小点，一一讲清楚之后串联起来。我的IGCSE成绩有了显著的提高。</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -96,8 +96,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-2.png" alt="">
                             </div>
-                            <h4>Online Marketing</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Cedar / IB英语</h4>
+                            <p>英语一直是我的弱项，但是想申报国际学校必须要学习。老师除了英语基础之外，会给我布置一些有趣的英文阅读任务，拓宽知识面的同时学习了英语，对我的帮助很大。</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -168,35 +168,22 @@
             <div class="left_3d">
                 <div class="shap_slider_inner owl-carousel">
                     <div class="item">
-                        <h4>“They are the best”</h4>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                        <h4>“SuperNova是最负责的”</h4>
+                        <p>SuperNova会听取家长和学生对授课内容的意见，并如实转达给老师，方便老师改进教学方式，是老师和学生之间很好的调和剂。</p>
                         <div class="media">
-                            <img src="img/team/people/people-5.jpg" alt="">
                             <div class="media-body">
-                                <h5>Chriss Turner</h5>
-                                <h6>CEO Enterprise</h6>
+                                <h5>Chriss</h5>
+                                <h6>Computer Teacher</h6>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <h4>“They are the best”</h4>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                        <p>机构内老师均是名校毕业，相互沟通交流无障碍。公司有丰富的团建项目，注重企业文化。</p>
                         <div class="media">
-                            <img src="img/team/people/people-5.jpg" alt="">
                             <div class="media-body">
-                                <h5>Chriss Turner</h5>
-                                <h6>CEO Enterprise</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h4>“They are the best”</h4>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
-                        <div class="media">
-                            <img src="img/team/people/people-5.jpg" alt="">
-                            <div class="media-body">
-                                <h5>Chriss Turner</h5>
-                                <h6>CEO Enterprise</h6>
+                                <h5>Tommy</h5>
+                                <h6>Physics Teacher</h6>
                             </div>
                         </div>
                     </div>
@@ -207,13 +194,12 @@
                     <div class="text_3d">
                         <div class="l_title">
                             <img src="img/icon/title-icon.png" alt="">
-                            <h6>Discover the features</h6>
                             <h2>We don’t hide, we stand tall in front of challenge</h2>
                         </div>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. </p>
+                        <p>我们相信，如果SuperNova没有好的老师，它就不可能有现在的成绩。公司成立以来，我们一直希望建立一个师生之间坦诚反馈的机制，因为坦诚是提高效率的基础，我们正在为之努力。我们在与我们的学生一同进步。</p>
                     </div>
                     <div class="shap_mobile">
-                        <img src="img/iphone4.png" alt="">
+                        <img src="img/iphone4.jpg" alt="">
                     </div>
                 </div>
             </div>
